	PR 4712 	* elf.c (assign_file_positions_for_load_sections): Adjust lma 	by p_vaddr_offset.